adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
h1, h2, h3, h4, h5, h1 a, h2 a, h3 a, legend {
    color: $black;
}

label {
    font-weight: normal;
}

/* Logo */
#logo {
    height: 90px;

    img {
        height: 100%;
    }
}
body.logged_in #logo img {
    height: 120%; // HACK
}

/* Subnav */
#subheader {
    background: $bg1;
    @include box-shadow(inset 0 -1em 1.5em -1em darken($bg1, 15%));
}

#subnav {
    li {
        a {
            background: none;
            color: $fg1;
        }
    }
    li a:hover,
    li a:focus,
    li.current a,
    li.current a:hover,
    li.current a:focus {
        background: white;
        color: $black;
    }
}

/* Content List */
#col1 .content_list > li {
    padding-left: 11px;
    padding-right: 11px;

    &:nth-child(odd) {
        background: none;
    }
    &:nth-child(even) {
        background: $bg1;
    }
}

/* button */
a.button,
#main .joyride-next-tip,
#main .joyride-prev-tip,
#searchform #searchsubmit,
.list_form input.go {
    color: $black;
    border: 1px solid $border;

    &:hover, &:focus {
        color: $black !important;
        border: 1px solid $border !important;
    }

    &.highlight, .register & {
        color: white !important;
        &:hover, &:focus {
            color: white !important;
        }
    }
}

/* close button */
.info_box .close_button, .overlay a.close, .alert a.close {
    color: $fg1;
    top: -20px;
    right: -20px;
    width: 39px;
    height: 39px;
    border: none;

    background-color: #fff;
    @include background-image(linear-gradient(170deg, lighten(#ddd, 20%) 30%, #ddd));
    &:hover, &:focus {
        background-color: darken(#fff, 7%);
        @include background-image(linear-gradient(170deg, lighten(#ddd, 10%) 30%, darken(#ddd, 10%)));
        text-decoration: none;
    }

    &:after {
        width: 39px;
        line-height: 39px;
    }
}

// center event pager icons
#col1 ul.content_list.events_pager > li:before {
    left: 9px;
}

// fix new comment button color for light background
a.new_comment {
    color: $black;
}

// pager
.pager {
    .current, &:active {
        color: $fg1;
    }
    a:hover,
    a:focus {
        color: $fg1;
    }
}

